--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=crud
+spring.datasource.url=jdbc:mysql://3.82.23.60:3306/myappdb
+spring.datasource.username=user
+spring.datasource.password=user
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+server.address=0.0.0.0
+server.port=8080
